--- a/rest_framework_docs/templates/rest_framework_docs/home.html
+++ b/rest_framework_docs/templates/rest_framework_docs/home.html
@@ -63,8 +63,17 @@
             <div class="alert alert-danger" role="alert">Oops! There was something wrong with {{ endpoint.errors }}. Please check your code.</div>
             {% endif %}
 
+            {% if endpoint.filters %}
+            <p class="fields-desc">Response Fields:</p>
+              <ul class="list fields">
+              {% for field in endpoint.filters %}
+                {{ field }}
+              {% endfor %}
+              </ul>
+            {% endif %}
+
             {% if endpoint.fields %}
-            <p class="fields-desc">Fields:</p>
+            <p class="fields-desc">Response Fields:</p>
               <ul class="list fields">
               {% for field in endpoint.fields %}
                 <li class="field">{{ field.name }}: {{ field.type }} {% if field.required %}<span class="label label-primary label-required" title="Required">R</span>{% endif %}</li>
